--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pear-app",
+  "type": "module",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -8,17 +9,39 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "browser": {
+    "crypto": "crypto-browserify",
+    "stream": "stream-browserify",
+    "http": false,
+    "https": false,
+    "os": false,
+    "zlib": false
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.5",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "@supabase/supabase-js": "^1.35.6",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "expo": "^53.0.9",
     "expo-router": "^3.5.24",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "^0.79.0"
+    "react-native": "^0.79.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "readable-stream": "^4.7.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "node-libs-browser": "^2.2.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
