--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "readable-stream": "^4.7.0",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
