scaffold app layout, restore profile setup, and fix Supabase auth flow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "strict": true,
     "jsx": "react",
     "target": "esnext",
-    "moduleResolution": "node",
-    "module": "esnext",
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
     "allowJs": true,
     "resolveJsonModule": true,
     "noEmit": true,
