--- a/package.json
+++ b/package.json
@@ -1,47 +1,33 @@
 {
   "name": "pear-app",
-  "type": "module",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
-  "browser": {
-    "crypto": "crypto-browserify",
-    "stream": "stream-browserify",
-    "http": false,
-    "https": false,
-    "os": false,
-    "zlib": false
-  },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "@supabase/supabase-js": "^1.35.6",
-    "assert": "^2.1.0",
-    "buffer": "^6.0.3",
-    "events": "^3.3.0",
+    "@supabase/supabase-js": "^2.50.2",
     "expo": "^53.0.9",
-    "expo-router": "^3.5.24",
-    "process": "^0.11.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-native": "^0.79.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-router": "5.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "readable-stream": "^4.7.0",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5",
-    "expo-image-picker": "~16.1.4"
+    "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
-    "node-libs-browser": "^2.2.1",
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
