--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-haptics": "~14.1.4",
+    "expo-notifications": "~0.31.4",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
