--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.50.2",
     "expo": "^53.0.9",
+    "expo-dev-client": "~5.2.4",
+    "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-router": "5.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,15 +28,16 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-haptics": "~14.1.4",
-    "expo-notifications": "~0.31.4",
-    "expo-dev-client": "~5.2.4"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
+    "jest": "^30.0.4",
     "typescript": "^5.3.3"
   },
   "private": true
