--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       ]
     },
     "types": [
-      "expo-router"
+      "expo-router",
+      "jest",
+      "react",
+      "react-native"
     ],
     "allowImportingTsExtensions": false
   },
