--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -38,6 +39,8 @@
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "react-test-renderer": "^19.0.0",
     "typescript": "^5.3.3"
   },
   "private": true
