Add availability grid functionality, linting setup, and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,15 @@
       "react",
       "react-native"
     ],
-    "allowImportingTsExtensions": false
+    "allowImportingTsExtensions": false,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true
   },
   "extends": "expo/tsconfig.base"
 }
