--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-notifications": "~0.31.4",
     "expo-router": "5.1.0",
+    "expo-updates": "~0.28.17",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.0",
@@ -29,18 +30,27 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-updates": "~0.28.17"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "prettier": "^3.6.2",
     "react-test-renderer": "^19.0.0",
     "typescript": "^5.3.3"
   },
