--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
-node_modules
-.expo
-.expo-shared
-.env
+# Node modules
+node_modules/
+# Build output
+dist/
+build/
+.expo/
+.expo-shared/
+# System files
 .DS_Store
+# Environment variables
+.env
+.env.*
+# iOS/Android build
+ios/build/
+android/app/build/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# Mac system files
+*.DS_Store
+# Expo web build
+web-build/
+# Coverage
+coverage/
+# IDE/editor folders
+.vscode/
+.idea/
+# Misc
+*.log
