--- a/package.json
+++ b/package.json
@@ -20,18 +20,16 @@
     "ajv-formats": "^3.0.1",
     "ajv-keywords": "^5.1.0",
     "chrome-launcher": "^1.2.0",
-    "expo": "^53.0.9",
     "expo-config-plugins": "^0.1.2",
     "expo-dev-client": "~5.2.4",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "^7.1.7",
     "expo-notifications": "~0.31.4",
-    "expo-router": "^5.1.3",
     "expo-updates": "~0.28.17",
     "jest-validate": "^30.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.79.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
@@ -40,7 +38,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
-    "react-test-renderer": "^19.0.0"
+    "react-test-renderer": "19.1.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
@@ -61,13 +59,15 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
+    "expo": "^53.0.19",
+    "expo-router": "^5.1.3",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "jest-expo": "^53.0.9",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.0",
     "react-test-renderer": "^19.0.0",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "private": true,
@@ -75,5 +75,8 @@
     "router": {
       "appRoot": "./app"
     }
+  },
+  "overrides": {
+    "react-native-renderer": "19.1.0"
   }
 }
