--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "expo-notifications": "~0.31.4",
     "expo-updates": "~0.28.17",
     "jest-validate": "^30.0.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
@@ -37,15 +37,11 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-test-renderer": "19.1.0"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
@@ -61,12 +57,9 @@
     "eslint-plugin-react-native": "^5.0.0",
     "expo": "^53.0.19",
     "expo-router": "^5.1.3",
-    "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "jest-expo": "^53.0.9",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.6.2",
-    "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
