--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "@supabase/supabase-js": "^2.50.2",
+    "@supabase/supabase-js": "^2.51.0",
     "@ungap/structured-clone": "^1.3.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^3.0.1",
