--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-status-bar": "~2.2.3"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
