--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
-    "expo-status-bar": "~2.2.3"
+    "expo-status-bar": "~2.2.3",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
