--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "^7.1.7",
+    "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.4",
+    "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
     "jest-validate": "^30.0.2",
     "react": "19.0.0",
@@ -40,13 +42,12 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-status-bar": "~2.2.3",
-    "expo-location": "~18.1.6"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
@@ -62,9 +63,12 @@
     "eslint-plugin-react-native": "^5.0.0",
     "expo": "^53.0.19",
     "expo-router": "^5.1.3",
+    "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "jest-expo": "^53.0.9",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.6.2",
+    "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
