--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "react-native": "0.79.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-maps": "1.20.1"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
