--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "supports-hyperlinks": "^4.1.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.27.1",
